--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fastrealpath",
-  "version": "1.0.0",
-  "description": "Wrapper around fast C native realpath. Low startup time makes this great for build scripts.",
+  "version": "0.0.1",
+  "description": "Beta Release: Wrapper around fast C native realpath. Low startup time makes this great for build scripts.",
   "main": "index.js",
   "scripts": {
     "postinstall": "gcc -o ./.bin/realpath -x c - <<< $'#include<stdlib.h>\nmain(int cc, char**vargs){\n  puts(realpath(vargs[1], 0));\n}'",
@@ -17,6 +17,14 @@
   "keywords": [
     "realpath"
   ],
+  "exportedEnvVars": {
+    "PATH": {
+      "val": "./bin",
+      "resolveAsRelativePath": true,
+      "global": true,
+      "globalCollisionBehavior": "joinPath"
+    }
+  },
   "author": "",
   "license": "MIT",
   "bugs": {
